# python_risk_analytics

./: .env  .gitignore  Finance_data.db  README.md  SMTP_connection.py  app.py  check_data.py  clear_user_data.py  confirm_user.py  create_app.py  desktop.ini  finance_data.db  forms.py  h origin advanced_sustains_page  manual_confirming_client.py  models.py  pyproject.toml  requirements.txt  rest_api.py  routes.py  send_confirmation_email.py  test_running.py
migrations/: alembic.ini
migrations/versions/: 23e92c0c0b7e_create_initial_tables.py  ea5928ed0c4b_recreate_database_schema.py
static/css/: style.css
templates/: add_portfolio.html  add_stock.html  base.html  dashboard.html  edit_stock.html  form.html  index.html  login.html  register.html  unauthorized..html
