[project]
name = "python_risk_analytics"
version = "0.1.0"
description = "Risk analytics platform for fund managers"
authors = [
    {name = "Arjun C Unni", email = "arjuncrevathi@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
]
packages = [
    { include = "python_risk_analytics" }
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
